--- a/index.html
+++ b/index.html
@@ -5,34 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Probability of Superiority</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@materializecss/materialize@1.1.0-alpha/dist/css/materialize.min.css">
     <link rel="stylesheet" href="dist/prob.css">
 </head>
 <body>
     <div id="game">
-        <h1>Probability of superiority game</h1>
+        <h1>Probability of superiority</h1>
+        <div id="settings">
+            <form action="#">
+                <p><label for="use_se"><input type="checkbox" id="use_se" name="use_se" checked="checked" /> <span>Show SE</span></label></p>
+                <p><label for="use_sd"><input type="checkbox" id="use_sd" name="use_sd"></input><span>Show SD</span></label></p>
+                <p><label for="use_points"><input type="checkbox" id="use_points" name="use_points" disabled="disabled"></input><span>Show tutorial after
+                    round (not implemented yet)</span></label></p>
+            </form>
+        </div>
+
         <div id="dashboard">
             <div id="chart"></div>
             <div id="results">
                 <div>
-                    Guess: <span id="yourguess">&nbsp;</span>
+                    Guess: 
+                    <form action="#" id="theguess_form">
+                    <input type="number" id="theguess" placeholder="50-100" min=50 max=100></input>
+                    </form>
                 </div>
-                <div>
+                <div id="after_game">
+                    <div>
                     Answer: <span id="answer">&nbsp;</span>
+                    </div>
+                    <div>
+                            <a class="btn waves-effect waves-light" id="newgame">New round</a>
+                    </div>
                 </div>
             </div>
         </div>
         <div>Suppose you run a randomized control trial with a treatment and a control condition, measuring some dependent variable of interest. The outcome variables appear to be normally distributed within each condition. In the plot above, we show the means and 95% CIs for these two outcomes. Now suppose we drew 100 pairs of data points from the treatment and control groups. Out of those 100 pairs, in how many pairs can we expect the treatment outcome to be higher than the control outcome?</div>
-
-        <div id="controls">
-            <form id="guessform" method="post">
-                <input type="number" id="theguess" placeholder="50-100" min=50 max=100></input>
-                <input type="submit" value="Submit"></input>
-                <input type="button" id="newgame" value="New round"></input>
-            </form>
-        </div>
-
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@materializecss/materialize@1.1.0-alpha/dist/js/materialize.min.js"></script>
     <script src="dist/prob.js"></script>
 </body>
 </html>
