Show points; fix psup calculation

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
             <form action="#">
                 <p><label for="use_se"><input type="checkbox" id="use_se" name="use_se" checked="checked" /> <span>Show SE</span></label></p>
                 <p><label for="use_sd"><input type="checkbox" id="use_sd" name="use_sd"></input><span>Show SD</span></label></p>
-                <p><label for="use_points"><input type="checkbox" id="use_points" name="use_points" disabled="disabled"></input><span>Show tutorial after
-                    round (not implemented yet)</span></label></p>
+                <p><label for="use_points"><input type="checkbox" id="use_points" name="use_points"></input><span>Show points</span></label></p>
             </form>
         </div>
 
@@ -45,7 +44,7 @@
     </div>
 
     
-    <script type="text/javascript" src="https://unpkg.com/@stdlib/dist-flat"></script>
+    <!--<script type="text/javascript" src="https://unpkg.com/@stdlib/dist-flat"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/@materializecss/materialize@1.1.0-alpha/dist/js/materialize.min.js"></script>
     <script src="dist/prob.js"></script>
 </body>
