Option to display points/tutorial after guess

--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
                 <p><label for="use_se"><input type="checkbox" id="use_se" name="use_se" checked="checked" /> <span>Show SE</span></label></p>
                 <p><label for="use_sd"><input type="checkbox" id="use_sd" name="use_sd"></input><span>Show SD</span></label></p>
                 <p><label for="use_points"><input type="checkbox" id="use_points" name="use_points"></input><span>Show points</span></label></p>
+                <p><label for="show_tutorial"><input type="checkbox" id="show_tutorial" name="show_tutorial"></input><span>Show tutorial after guess</span></label></p>
             </form>
         </div>
 
         <div id="dashboard">
+            <div>Suppose you run a randomized control trial with a treatment and a control condition, measuring some dependent variable of interest. The outcome variables appear to be normally distributed within each condition. In the plot above, we show the means and 95% CIs for these two outcomes. <b>Suppose we drew 100 pairs of data points from the treatment and control groups. Out of those 100 pairs, in how many pairs can we expect the treatment outcome to be higher than the control outcome?</b></div>
             <div id="chart"></div>
             <div id="results">
                 <div>
@@ -34,13 +36,13 @@
                     <div>
                     Answer: <span id="answer">&nbsp;</span>
                     </div>
+                    <div id="tutorial">The error bars displayed were 95% confidence intervals from the data shown above. The tightness of the error bars reflects how precisely the population mean can be estimated from the mean of the given sample. The data itself can still substantially overlap, even if the confidence intervals around the means do not overlap.</div>
                     <div>
                             <a class="btn waves-effect waves-light" id="newgame">New round</a>
                     </div>
                 </div>
             </div>
         </div>
-        <div>Suppose you run a randomized control trial with a treatment and a control condition, measuring some dependent variable of interest. The outcome variables appear to be normally distributed within each condition. In the plot above, we show the means and 95% CIs for these two outcomes. Now suppose we drew 100 pairs of data points from the treatment and control groups. Out of those 100 pairs, in how many pairs can we expect the treatment outcome to be higher than the control outcome?</div>
     </div>
 
     
