--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="dist/prob.css">
 </head>
 <body>
-    <div id="game">
+    <div id="game" class="container">
         <h1>Probability of superiority</h1>
         <h2 id="loading">Loading...
             <div class="progress">
@@ -29,26 +29,31 @@
             </form>
         </div>
 
-        <div id="dashboard">
-            <div>Suppose you run a randomized control trial with a treatment and a control condition, measuring some dependent variable of interest. The outcome variables appear to be normally distributed within each condition. In the plot above, we show the means and 95% CIs for these two outcomes. <b>Suppose we drew 100 pairs of data points from the treatment and control groups. Out of those 100 pairs, in how many pairs can we expect the treatment outcome to be higher than the control outcome?</b></div>
-            <h4>Trial <span id="trialdisplay">1</span> of 20</h4>
-            <div id="chart"></div>
-            <div id="results">
-                <div>
-                    Guess: 
-                    <form action="#" id="theguess_form">
-                    <input type="number" id="theguess" placeholder="50-100" min=50 max=100></input>
-                    </form>
-                </div>
-                <div id="after_game">
-                    <div id="answer_block">
-                    Answer: <span id="answer">&nbsp;</span>
-                    </div>
-                    <div id="tutorial">The error bars displayed were 95% confidence intervals from the data shown above. The tightness of the error bars reflects how precisely the population mean can be estimated from the mean of the given sample. The data itself can still substantially overlap, even if the confidence intervals around the means do not overlap.</div>
+        <div id="dashboard" class="row">
+            <div class="col s6">
+                <h4>Trial <span id="trialdisplay">1</span> of 20</h4>
+                Suppose you run a randomized control trial with a treatment and a control condition, measuring some dependent variable of interest. The outcome variables appear to be normally distributed within each condition. In the plot above, we show the means and 95% CIs for these two outcomes. <b>Suppose we drew 100 pairs of data points from the treatment and control groups. Out of those 100 pairs, in how many pairs can we expect the treatment outcome to be higher than the control outcome?</b>
+                <div id="results">
                     <div>
-                            <a class="btn waves-effect waves-light" id="newgame">Continue</a>
+                        Guess: 
+                        <form action="#" id="theguess_form">
+                        <input type="number" id="theguess" placeholder="50-100" min=50 max=100></input>
+                        </form>
+                    </div>
+                    <div id="after_game">
+                        <div id="answer_block">
+                        Answer: <span id="answer">&nbsp;</span>
+                        </div>
+                        <div id="tutorial">The error bars displayed were 95% confidence intervals from the data shown above. The tightness of the error bars reflects how precisely the population mean can be estimated from the mean of the given sample. The data itself can still substantially overlap, even if the confidence intervals around the means do not overlap.</div>
+                        <div>
+                                <a class="btn waves-effect waves-light" id="newgame">Continue</a>
+                        </div>
                     </div>
                 </div>
+            
+            </div>
+            <div class="col s6">
+                <div id="chart"></div>
             </div>
         </div>
 
