--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                         <div id="answer_block">
                         Answer: <span id="answer">&nbsp;</span>
                         </div>
+
+                        <div><b>Yoke ID (delete for mturk): </b> <span id="yokeid"></span></div>
                         <div id="tutorial">The 95% confidence intervals were generated from data points, which we are now showing. We rescaled the y-axis of the plot, but the confidence intervals themselves haven't changed.</div>
                         <div>
                                 <a class="btn waves-effect waves-light" id="newgame">Continue</a>
