--- a/index.html
+++ b/index.html
@@ -10,68 +10,100 @@
     <link rel="stylesheet" href="dist/prob.css">
 </head>
 <body>
-    <div id="game" class="container">
-        <h1>Probability of superiority</h1>
+    <div id="container" class="container">
+        <h2>Probability of superiority</h2>
         <h2 id="loading">Loading...
             <div class="progress">
                 <div class="indeterminate"></div>
             </div>
         </h2>
-
-        <div id="trialsettings" class="card-panel">
-            <div><b>Debug settings (these will be removed before putting on mturk)</b></div>
-            <form id="experiment_debug_form" action="#">
-                <p><label for="condition1"><input type="radio" id="condition1" name="condition" value="SE_ONLY" checked="checked" /> <span>Condition 1 (SE only)</span></label></p>
-                <p><label for="condition2"><input type="radio" id="condition2" name="condition" value="SE_POINTS" /> <span>Condition 2 (SE + points)</span></label></p>
-                <p><label for="condition3"><input type="radio" id="condition3" name="condition" value="SE_POINTS_ONESHOT"  /> <span>Condition 3 (SE + points oneshot)</span></label></p>
-                <p><label for="condition4"><input type="radio" id="condition4" name="condition" value="SE_POINTS_FEEDBACK" /> <span>Condition 4 (SE + points feedback)</span></label></p>
-                <label for="trialnumber">Trial number<input type="number" id="trialnumber" placeholder="1-20" min=1 max=20 value=1></input></label>
-            </form>
+        <h2 id="submitting">Submitting results...
+            <div class="progress">
+                <div class="indeterminate"></div>
+            </div>
+        </h2>
+        <div id="submitsuccess">Success! Your experiment has concluded.</div>
+        <div id="submitfailure">
+            Error. Your results have somehow failed to submit. Please email decisionresearchlab@outlook.com referencing
+            the following information and we will look into the issue:
+            <div id="errorBlock" class="card-panel">
+            Participant Id: <div id="workerIdError"></div>
+            <br />
+            Survey id: <div id="taskIdError"></div>
+            <br />
+            Error: <div id="turkSubmitError"></div>
+            </div>
         </div>
-
-        <div id="dashboard" class="row">
-            <div class="col s6">
-                <h4>Trial <span id="trialdisplay">1</span> of 20</h4>
-                <p>Suppose you run a randomized control trial with a treatment and a control condition, measuring some dependent variable of interest. The outcome variables appear to be normally distributed within each condition. In the plot above, we show the means and 95% CIs for these two outcomes. <b>Suppose we drew 100 pairs of data points from the treatment and control groups. Out of those 100 pairs, in how many pairs can we expect the treatment outcome to be higher than the control outcome?</b></p>
-                <p><em>Note: on some trials you will be shown the correct answer after your guess.</em></p>
-                <div id="results">
-                    <div>
-                        Guess: 
-                        <form action="#" id="theguess_form">
-                        <input type="number" id="theguess" placeholder="50-100" min=50 max=100></input>
-                        </form>
-                    </div>
-                    <div id="after_game">
-                        <div id="answer_block">
-                        Answer: <span id="answer">&nbsp;</span>
-                        </div>
-
-                        <div><b>Yoke ID (delete for mturk): </b> <span id="yokeid"></span></div>
-                        <div id="tutorial">The 95% confidence intervals were generated from data points, which we are now showing. We rescaled the y-axis of the plot, but the confidence intervals themselves haven't changed.</div>
+        <div id="game">
+            <div id="dashboard" class="row card-panel">
+                <div class="col l6 m12">
+                    <h4>Trial <span id="trialdisplay">1</span> of 20</h4>
+                    <p>Suppose you run a randomized control trial with a treatment and a control condition, measuring
+                        some dependent variable of interest. The outcome variables appear to be normally distributed
+                        within each condition. In the plot above, we show the means and 95% CIs for these two outcomes.
+                        <b>Suppose we drew 100 pairs of data points from the treatment and control groups. Out of those
+                            100 pairs, in how many pairs can we expect the treatment outcome to be higher than the
+                            control outcome?</b></p>
+                    <p><em>Note: on some trials you will be shown the correct answer after your guess.</em></p>
+                    <div id="results">
                         <div>
+                            Guess:
+                            <form action="#" id="theguess_form">
+                                <input type="number" id="theguess" placeholder="50-100" min=50 max=100></input>
+                            </form>
+                        </div>
+                        <div id="after_game">
+                            <div id="answer_block">
+                                Answer: <span id="answer">&nbsp;</span>
+                            </div>
+
+                            <div id="tutorial">The 95% confidence intervals were generated from data points, which we
+                                are now showing. We rescaled the y-axis of the plot, but the confidence intervals
+                                themselves haven't changed.</div>
+                            <div>
                                 <a class="btn waves-effect waves-light" id="newgame">Continue</a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            
+                <div class="col l6 m12">
+                    <div id="chart"></div>
+                </div>
             </div>
-            <div class="col s6">
-                <div id="chart"></div>
-            </div>
-        </div>
 
-        <div id="debug_data_panel" class="card-panel">
-            <div><b>Data collected so far (this will be hidden on mturk)</b></div>
-            <div id="debug_data"></div>
-        </div>
-
-        <div id="confirmation_modal" class="modal">
-            <div class="modal-content">
-                <h4>What you are seeing is about to change</h4>
-                <p>The error bars are still 95% confidence intervals, except now we will hide or display the data points that the error bars were generated from.</p>
+            <div id="trialsettings" class="col s12">
+                <div><b>Debug settings (these will be removed before putting on mturk)</b></div>
+                <form id="experiment_debug_form" action="#">
+                    <p><label for="condition1"><input type="radio" id="condition1" name="condition" value="SE_ONLY"
+                                checked="checked" /> <span>Condition 1 (SE only)</span></label></p>
+                    <p><label for="condition2"><input type="radio" id="condition2" name="condition" value="SE_POINTS" />
+                            <span>Condition 2 (SE + points)</span></label></p>
+                    <p><label for="condition3"><input type="radio" id="condition3" name="condition"
+                                value="SE_POINTS_ONESHOT" /> <span>Condition 3 (SE + points oneshot)</span></label></p>
+                    <p><label for="condition4"><input type="radio" id="condition4" name="condition"
+                                value="SE_POINTS_FEEDBACK" /> <span>Condition 4 (SE + points feedback)</span></label>
+                    </p>
+                    <label for="trialnumber">Trial number<input type="number" id="trialnumber" placeholder="1-20" min=1
+                            max=20 value=1></input></label>
+                </form>
             </div>
-            <div class="modal-footer">
-                <a href="#!" class="modal-close waves-effect waves-green btn-flat">I understand</a>
+
+
+            <div id="debug_data_panel" class="col s12">
+                <div><b>Data collected so far</b></div>
+                <div id="debug_data"></div>
+            </div>
+
+
+            <div id="confirmation_modal" class="modal">
+                <div class="modal-content">
+                    <h4>What you are seeing is about to change</h4>
+                    <p>The error bars are still 95% confidence intervals, except now we will hide or display the data
+                        points that the error bars were generated from.</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="#!" class="modal-close waves-effect waves-green btn-flat">I understand</a>
+                </div>
             </div>
         </div>
     </div>
