Revisions based on today's meeting
* Draw n from binomial distribution for each trial (so sample sizes are
  more balanced)
* Readability edits of main prompt text

--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <div id="dashboard" class="row card-panel">
                 <div class="col l6 m12">
                     <h4>Trial <span id="trialdisplay">1</span> of 20</h4>
-                    <p>Suppose you run a randomized control trial with a treatment and a control condition, measuring
-                        some dependent variable of interest. The outcome variables appear to be normally distributed
-                        within each condition. In the plot above, we show the means and 95% CIs for these two outcomes.
-                        <b>Suppose we drew 100 pairs of data points from the treatment and control groups. Out of those
-                            100 pairs, in how many pairs can we expect the treatment outcome to be higher than the
-                            control outcome?</b></p>
-                    <p><em>Note: on some trials you will be shown the correct answer after your guess.</em></p>
+                    <p>Suppose you have measurements on two groups of people, some in a treatment condition and some in a control condition. The outcomes in each condition follow a bell curve (or normal distribution), as you might see for heights or weights. The accompanying plot shows the estimated average of each group with a 95% confidence interval around each estimate.  
+                    </p>
+                    <p><b>
+                        Suppose we drew 100 pairs of people from the treatment and control groups. Out of those 100 pairs, in how many pairs can we expect the treatment outcome to be higher than the control outcome? 
+                    </b></p>
+                    <p><em>Note: on some trials you will see the correct answer after your guess.</em></p>
+
                     <div id="results">
                         <div>
                             Guess:
